--- a/src/fxml/SMS.fxml
+++ b/src/fxml/SMS.fxml
@@ -2,13 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.TextFlow?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="369.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sourse.SmsController">
    <children>
@@ -38,6 +38,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                   </TextFlow>
+                  <TextArea fx:id="taMess" layoutX="8.0" layoutY="214.0" prefHeight="149.0" prefWidth="352.0" wrapText="true" />
                </children>
             </AnchorPane>
             <TextField fx:id="tfSend" prefHeight="25.0" prefWidth="272.0">
